--- a/mods/musicplayer/plugins/mp3plugin/CMakeLists.txt
+++ b/mods/musicplayer/plugins/mp3plugin/CMakeLists.txt
@@ -4,12 +4,13 @@ project(cpp-mods.musicplayer.mp3plugin)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 set(SOURCE_FILES MP3Plugin.cpp)
 
-find_library(MPG123_LIBRARY libmpg123.a)
+find_library(MPG123_LIBRARY mpg123 REQUIRED)
 find_path(MPG123_PATH mpg123.h)
 
 if(${MPG123_LIBRARY})
 	include_directories(${MPG123_PATH})
 else()
+	message("Building libmpg123 from local source")
 	add_subdirectory(mpg123-1.21.0/src/libmpg123 libmpg123)
 	include_directories(mpg123-1.21.0/src/libmpg123)
 	set(MPG123_LIBRARY libmpg123)
@@ -25,5 +26,9 @@ if(NOT TARGET crypto)
 	endif()
 endif()
 
+find_library(CURL_LIBRARY curl REQUIRED)
+find_path(CURL_INCLUDE curl/curl.h)
+include_directories(${CURL_INCLUDE})
+
 add_library(mp3plugin ${SOURCE_FILES})
-target_link_libraries(mp3plugin ${MPG123_LIBRARY} curl)
+target_link_libraries(mp3plugin ${MPG123_LIBRARY} ${CURL_LIBRARY})
