More cmake & compilation fixes

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -7,33 +7,23 @@ set(CPP_MODS ../mods)
 
 include_directories(${CPP_MODS})
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -g -Wno-warn-absolute-paths")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -g -Wno-warn-absolute-paths")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -g")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -g")
 
 set(CPP_MODS_MODULES
 	coreutils
 	audioplayer
 	grappix
-	#bbsutils
-	#fft
 	archive
-	#webutils
-	#json
-	#luainterpreter
-	#sqlite3
 )
 add_subdirectory(${CPP_MODS} cppmods)
-
 add_subdirectory(${CPP_MODS}/musicplayer/plugins/modplugin modplugin)
-
-include_directories(${CPP_MODS}/grappix)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 
-if(EMSCRIPTEN)
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --preload-file data/stardust.mod")
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --preload-file data/ObelixPro.ttf")
-endif()
+include(../cmake/Utils.cmake)
+SET_DATA_FILES(data/stardust.mod data/ObelixPro.ttf)
+
 #add_executable(simple simple.cpp)
 #target_link_libraries(simple coreutils grappix)
 
@@ -43,6 +33,3 @@ target_link_libraries(demo coreutils audioplayer grappix modplugin)
 #add_executable(snake snake.cpp)
 #target_link_libraries(snake coreutils grappix)
 
-if(EMSCRIPTEN)
-set_target_properties(demo PROPERTIES LINK_FLAGS "-s USE_GLFW=3 -s ASSERTIONS=2")
-endif()
