--- a/mods/audioplayer/CMakeLists.txt
+++ b/mods/audioplayer/CMakeLists.txt
@@ -5,7 +5,10 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 
 set(SOURCE_FILES audioplayer.cpp)
 
-if(APPLE OR EMSCRIPTEN)
+if(EMSCRIPTEN)
+	add_definitions(-DSDL_AUDIO)
+	set(SOURCE_FILES ${SOURCE_FILES} player_sdl.cpp)
+elseif(APPLE)
 	find_package(SDL)
 	set(EXTRA_LIBS ${EXTRA_LIBS} ${SDL_LIBRARY})
 	include_directories(${SDL_INCLUDE_DIR})
