--- a/mods/sqlite3/CMakeLists.txt
+++ b/mods/sqlite3/CMakeLists.txt
@@ -7,8 +7,11 @@ add_definitions(-DSQLITE_ENABLE_FTS3 -DSQLITE_ENABLE_FTS3_PARENTHESIS)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 
+if(UNIX)
+  set(EXTRA_LIBS dl)
+endif()
 
 
 add_library(sqlite3 ${SOURCE_FILES})
 
-target_link_libraries(sqlite3 pthread)
+target_link_libraries(sqlite3 pthread ${EXTRA_LIBS})
