--- a/mods/grappix/CMakeLists.txt
+++ b/mods/grappix/CMakeLists.txt
@@ -48,7 +48,7 @@ elseif(UNIX)
   set(SOURCE_FILES ${SOURCE_FILES} grappix/specific/window_pc.cpp)
   find_package(OpenGL REQUIRED)
   find_package(GLEW REQUIRED)
-  find_library(GLFW_LIBRARY glfw REQUIRED)
+  find_library(GLFW_LIBRARY libglfw.so.3 libglfw3.a REQUIRED)
 
   set(EXTRA_LIBS ${EXTRA_LIBS} ${OPENGL_LIBRARIES})
   include_directories(${OPENGL_INCLUDE_DIRS})
@@ -58,8 +58,11 @@ elseif(UNIX)
 
   set(EXTRA_LIBS ${EXTRA_LIBS} ${GLFW_LIBRARY})
   if(NOT APPLE)
-    #set(EXTRA_LIBS ${EXTRA_LIBS} -lX11 -lXxf86vm -lXrandr -lpthread -lXi -lXinerama -lXcursor)
-    set(EXTRA_LIBS ${EXTRA_LIBS} -lX11 -lXxf86vm -lpthread)
+    if(GLFW_LIBRARY MATCHES "\\.a")
+      set(EXTRA_LIBS ${EXTRA_LIBS} -lX11 -lXxf86vm -lXrandr -lpthread -lXi -lXinerama -lXcursor)
+    else()
+      set(EXTRA_LIBS ${EXTRA_LIBS} -lX11 -lXxf86vm -lpthread)
+    endif()
   endif()
 else()
   set(SOURCE_FILES ${SOURCE_FILES} grappix/specific/window_pc.cpp)
