--- a/mods/grappix/CMakeLists.txt
+++ b/mods/grappix/CMakeLists.txt
@@ -24,9 +24,11 @@ if(NOT TARGET freetype)
 endif()
 include_directories(${FREETYPE_INCLUDE_DIR})
 
-#if(NOT TARGET glew)
-#  add_subdirectory(../glew glew)
-#endif()
+if(NOT TARGET glew)
+  add_subdirectory(../glew glew)
+  add_definitions(-DGLEW_STATIC)
+  set(EXTRA_LIBS ${EXTRA_LIBS} glew)
+endif()
 
 if(APPLE)
    find_library(COCOA_LIBRARY Cocoa)
@@ -47,14 +49,14 @@ elseif(RASPBERRY)
 elseif(UNIX)
   set(SOURCE_FILES ${SOURCE_FILES} grappix/specific/window_pc.cpp)
   find_package(OpenGL REQUIRED)
-  find_package(GLEW REQUIRED)
+ # find_package(GLEW REQUIRED)
   find_library(GLFW_LIBRARY NAMES libglfw.so.3 libglfw3.a REQUIRED)
 
   set(EXTRA_LIBS ${EXTRA_LIBS} ${OPENGL_LIBRARIES})
   include_directories(${OPENGL_INCLUDE_DIRS})
 
-  set(EXTRA_LIBS ${EXTRA_LIBS} ${GLEW_LIBRARIES})
-  include_directories(${GLEW_INCLUDE_DIRS})
+  #set(EXTRA_LIBS ${EXTRA_LIBS} ${GLEW_LIBRARIES})
+  #include_directories(${GLEW_INCLUDE_DIRS})
 
   set(EXTRA_LIBS ${EXTRA_LIBS} ${GLFW_LIBRARY})
   if(NOT APPLE)
