Improvements to file_find, added rename() and getModified()

--- a/mods/coreutils/CMakeLists.txt
+++ b/mods/coreutils/CMakeLists.txt
@@ -7,6 +7,10 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 
 add_library(coreutils ${SOURCE_FILES})
 
+if(APPLE)
+	add_definitions(-DAPPLE)
+endif()
+
 if(DO_UNIT_TEST)
 add_executable(coreutils_test ../test/catch.cpp)
 target_link_libraries(coreutils_test coreutils)
