--- a/mods/audioplayer/CMakeLists.txt
+++ b/mods/audioplayer/CMakeLists.txt
@@ -7,13 +7,13 @@ set(SOURCE_FILES audioplayer.cpp)
 
 if(EMSCRIPTEN)
 	add_definitions(-DSDL_AUDIO)
-	set(SOURCE_FILES ${SOURCE_FILES} player_sdl.cpp)
+	#set(SOURCE_FILES ${SOURCE_FILES} player_sdl.cpp)
 elseif(APPLE)
 	find_package(SDL)
 	set(EXTRA_LIBS ${EXTRA_LIBS} ${SDL_LIBRARY})
 	include_directories(${SDL_INCLUDE_DIR})
 	add_definitions(-DSDL_AUDIO)
-	set(SOURCE_FILES ${SOURCE_FILES} player_sdl.cpp)
+	#set(SOURCE_FILES ${SOURCE_FILES} player_sdl.cpp)
 elseif(WINDOWS)
 	set(SOURCE_FILES ${SOURCE_FILES} player_win.cpp)	
 else()
