--- a/examples/skeleton/CMakeLists.txt
+++ b/examples/skeleton/CMakeLists.txt
@@ -1,19 +1,19 @@
 cmake_minimum_required(VERSION 2.8.4)
-project(examples)
+project(skeleton)
 
-add_definitions(-DAPP_NAME=examples)
-
-get_filename_component(AP1_ROOT .. ABSOLUTE)
-#set(AP1_ROOT ..)
+## NOTE: YOU  MUST SET AP1_ROOT
+set(AP1_ROOT $ENV{AP1_ROOT})
 
 include(${AP1_ROOT}/cmake/Utils.cmake)
+
+add_definitions(-DAPP_NAME=skeleton)
+
 include_directories(${AP1_ROOT}/mods)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -g")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -g")
 
 set(APONE_MODULES
-	audioplayer
 	coreutils
 	grappix
 )
@@ -21,6 +21,5 @@ add_subdirectory(${AP1_ROOT}/mods ap1mods)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 
-add_subdirectory(simple)
-add_subdirectory(demo)
-add_subdirectory(snake)
+add_executable(skeleton main.cpp)
+target_link_libraries(skeleton coreutils grappix)
