--- a/mods/grappix/CMakeLists.txt
+++ b/mods/grappix/CMakeLists.txt
@@ -53,6 +53,7 @@ elseif(UNIX)
 if(NOT TARGET glew)
   add_subdirectory(../glew glew)
   add_definitions(-DGLEW_STATIC)
+  include_directories(../glew/glew-1.11.0/include)
   set(EXTRA_LIBS ${EXTRA_LIBS} glew)
 endif()
   #set(EXTRA_LIBS ${EXTRA_LIBS} ${GLEW_LIBRARIES})
