--- a/mods/musicplayer/plugins/mp3plugin/CMakeLists.txt
+++ b/mods/musicplayer/plugins/mp3plugin/CMakeLists.txt
@@ -4,7 +4,7 @@ project(cpp-mods.musicplayer.mp3plugin)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 set(SOURCE_FILES MP3Plugin.cpp)
 
-find_library(MPG123_LIBRARY mpg123 REQUIRED)
+find_library(MPG123_LIBRARY libmpg123.a mpg123 REQUIRED)
 find_path(MPG123_PATH mpg123.h)
 
 if(EXISTS ${MPG123_LIBRARY})
