--- a/mods/musicplayer/plugins/usfplugin/CMakeLists.txt
+++ b/mods/musicplayer/plugins/usfplugin/CMakeLists.txt
@@ -15,25 +15,56 @@ set(SOURCE_FILES
 	lazyusf/interpreter_cpu.c
 	lazyusf/interpreter_ops.c
 	lazyusf/main.c
-	lazyusf/memory.c
 	lazyusf/pif.c
 	lazyusf/registers.c
 	lazyusf/tlb.c
 	lazyusf/usf.c
+	lazyusf/memory.c
+	lazyusf/cpu_hle.c
+	lazyusf/audiolib.c
+	lazyusf/os.c
 	lazyusf/rsp/rsp.c
 	lazyusf/rsp_hle/alist.c
-	lazyusf/rsp_hle/alist_audio.c
-	lazyusf/rsp_hle/alist_naudio.c
 	lazyusf/rsp_hle/alist_nead.c
-	lazyusf/rsp_hle/audio.c
-	lazyusf/rsp_hle/cicx105.c
 	lazyusf/rsp_hle/jpeg.c
-	lazyusf/rsp_hle/hle.c
-	lazyusf/rsp_hle/memory.c
 	lazyusf/rsp_hle/mp3.c
+	lazyusf/rsp_hle/alist_audio.c
+	lazyusf/rsp_hle/audio.c
+	lazyusf/rsp_hle/hle.c
 	lazyusf/rsp_hle/musyx.c
+	lazyusf/rsp_hle/alist_naudio.c
+	lazyusf/rsp_hle/cicx105.c
+	lazyusf/rsp_hle/memory.c
 	lazyusf/rsp_hle/plugin.c
 )
+
+	# lazyusf/cpu_hle.c
+	# lazyusf/psflib.c
+	# lazyusf/audio.c
+	# lazyusf/cpu.c
+	# lazyusf/dma.c
+	# lazyusf/exception.c
+	# lazyusf/interpreter_cpu.c
+	# lazyusf/interpreter_ops.c
+	# lazyusf/main.c
+	# lazyusf/memory.c
+	# lazyusf/pif.c
+	# lazyusf/registers.c
+	# lazyusf/tlb.c
+	# lazyusf/usf.c
+	# lazyusf/rsp/rsp.c
+	# lazyusf/rsp_hle/alist.c
+	# lazyusf/rsp_hle/alist_audio.c
+	# lazyusf/rsp_hle/alist_naudio.c
+	# lazyusf/rsp_hle/alist_nead.c
+	# lazyusf/rsp_hle/audio.c
+	# lazyusf/rsp_hle/cicx105.c
+	# lazyusf/rsp_hle/jpeg.c
+	# lazyusf/rsp_hle/hle.c
+	# lazyusf/rsp_hle/memory.c
+	# lazyusf/rsp_hle/mp3.c
+	# lazyusf/rsp_hle/musyx.c
+	# lazyusf/rsp_hle/plugin.c
 
 #usfplugin_CFLAGS = -O3 -ffast-math -finline-functions -funswitch-loops
 ## -ftree-vectorizer-verbose=1 -fpredictive-commoning -fgcse-after-reload -ftree-vectorize -fipa-cp-clone
