USF HLE path = Pi working. Windows build fixes etc

--- a/mods/musicplayer/plugins/usfplugin/CMakeLists.txt
+++ b/mods/musicplayer/plugins/usfplugin/CMakeLists.txt
@@ -2,40 +2,6 @@ cmake_minimum_required(VERSION 2.8.4)
 project(cpp-mods.musicplayer.usfplugin)
 
 
-#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -ffast-math -finline-functions -funswitch-loops")
-if(0)
-set(SOURCE_FILES
-	lazyusf/psflib.c
-	lazyusf/audio.c
-	lazyusf/cpu.c
-	lazyusf/dma.c
-	lazyusf/exception.c
-	lazyusf/interpreter_cpu.c
-	lazyusf/interpreter_ops.c
-	lazyusf/main.c
-	lazyusf/pif.c
-	lazyusf/registers.c
-	lazyusf/tlb.c
-	lazyusf/usf.c
-	lazyusf/memory.c
-	lazyusf/cpu_hle.c
-	lazyusf/audiolib.c
-	lazyusf/os.c
-	lazyusf/rsp/rsp.c
-	lazyusf/rsp_hle/alist.c
-	lazyusf/rsp_hle/alist_nead.c
-	lazyusf/rsp_hle/jpeg.c
-	lazyusf/rsp_hle/mp3.c
-	lazyusf/rsp_hle/alist_audio.c
-	lazyusf/rsp_hle/audio.c
-	lazyusf/rsp_hle/hle.c
-	lazyusf/rsp_hle/musyx.c
-	lazyusf/rsp_hle/alist_naudio.c
-	lazyusf/rsp_hle/cicx105.c
-	lazyusf/rsp_hle/memory.c
-	lazyusf/rsp_hle/plugin.c
-)
-else()
 set(SOURCE_FILES
 	lazyusf2/r4300/empty_dynarec.c
 	lazyusf2/psflib.c
@@ -90,18 +56,15 @@ set(SOURCE_FILES
 	lazyusf2/usf/usf.c
 	lazyusf2/vi/vi_controller.c
 )
-endif()
-#usfplugin_CFLAGS = -O3 -ffast-math -finline-functions -funswitch-loops
-## -ftree-vectorizer-verbose=1 -fpredictive-commoning -fgcse-after-reload -ftree-vectorize -fipa-cp-clone
+include_directories(. lazyusf2 lazyusf2/rsp_hle)
+
 #if(RASPBERRY)
-#	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DARCH_MIN_ARM_NEON -ftree-vectorizer-verbose=1 -fpredictive-commoning -fgcse-after-reload -ftree-vectorize -fipa-cp-clone")
+#add_definitions(-DARCH_MIN_ARM_NEON)
+#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Os -mcpu=cortex-a7 -mfpu=neon-vfpv4 -mfloat-abi=hard")
 #endif()
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-typedef-redefinition")
 
 find_package(ZLIB REQUIRED)
 include_directories(${ZLIB_INCLUDE_DIRS})
-
-include_directories(. lazyusf2 lazyusf2/rsp_hle)
 
 add_library(usfplugin USFPlugin.cpp resampler.c ${SOURCE_FILES})
 target_link_libraries(usfplugin ${ZLIB_LIBRARIES})
