--- a/mods/audioplayer/CMakeLists.txt
+++ b/mods/audioplayer/CMakeLists.txt
@@ -14,8 +14,10 @@ elseif(APPLE)
 	include_directories(${SDL_INCLUDE_DIR})
 	add_definitions(-DSDL_AUDIO)
 	#set(SOURCE_FILES ${SOURCE_FILES} player_sdl.cpp)
-elseif(WINDOWS)
+elseif(WIN32)
 	set(SOURCE_FILES ${SOURCE_FILES} player_win.cpp)
+	find_library(WINMM_LIBRARY winmm winmm REQUIRED)
+	set(EXTRA_LIBS ${EXTRA_LIBS} ${WINMM_LIBRARY})
 else()
 	add_definitions(-DLINUX)
 	find_library(ASOUND_LIBRARY asound REQUIRED)
