--- a/mods/musicplayer/plugins/uadeplugin/CMakeLists.txt
+++ b/mods/musicplayer/plugins/uadeplugin/CMakeLists.txt
@@ -5,8 +5,10 @@ add_subdirectory(uade)
 
 include_directories(../.. uade/uade/src/frontends/include)
 
-
+if(WIN32)
+set(EXTRA_LIBS ws2_32)
+endif()
 
 add_library(uadeplugin UADEPlugin.cpp)
-target_link_libraries(uadeplugin uade ws2_32)
+target_link_libraries(uadeplugin uade ${EXTRA_LIBS})
 
