New OSX audio player, SDL no longer needed

--- a/mods/audioplayer/CMakeLists.txt
+++ b/mods/audioplayer/CMakeLists.txt
@@ -7,11 +7,9 @@ if(EMSCRIPTEN)
 	add_definitions(-DSDL_AUDIO)
 	#set(SOURCE_FILES ${SOURCE_FILES} player_sdl.cpp)
 elseif(APPLE)
-	find_package(SDL)
-	set(EXTRA_LIBS ${EXTRA_LIBS} ${SDL_LIBRARY})
-	include_directories(${SDL_INCLUDE_DIR})
-	add_definitions(-DSDL_AUDIO)
-	#set(SOURCE_FILES ${SOURCE_FILES} player_sdl.cpp)
+	find_library(AUDIOTOOLBOX AudioToolbox)
+	set(EXTRA_LIBS ${EXTRA_LIBS} ${AUDIOTOOLBOX})
+	add_definitions(-DOSX_AUDIO)
 elseif(WIN32)
 	set(SOURCE_FILES ${SOURCE_FILES} player_win.cpp)
 	set(EXTRA_LIBS ${EXTRA_LIBS} winmm.lib) 
