--- a/mods/musicplayer/plugins/CMakeLists.txt
+++ b/mods/musicplayer/plugins/CMakeLists.txt
@@ -12,5 +12,6 @@ endforeach()
 
 message("PLUGIN XFILES:" ${EXTRA_FILES})
 
+set(PLUGIN_EXTRA_FILES ${EXTRA_FILES} PARENT_SCOPE)
 set(SOURCE_FILES ${SOURCE_FILES} ${EXTRA_FILES} PARENT_SCOPE)
 
