Fix bbsutils build for windows

--- a/mods/bbsutils/CMakeLists.txt
+++ b/mods/bbsutils/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 2.8.4)
 project(cpp-mods.bbsutils)
 
-
-
 add_subdirectory(../netlink netlink)
 include_directories(../netlink)
 
@@ -14,12 +12,9 @@ set(SOURCE_FILES
 	telnetserver.cpp
 )
 
-if(NOT WINDOWS)
+if(NOT WIN32)
   set(SOURCE_FILES ${SOURCE_FILES} localconsole.cpp)
 endif()
-
-
-
 
 add_library(bbsutils ${SOURCE_FILES})
 target_link_libraries(bbsutils netlink)
