--- a/mods/musicplayer/plugins/tedplugin/tedplay/tedplay.VS9.vcproj
+++ b/mods/musicplayer/plugins/tedplugin/tedplay/tedplay.VS9.vcproj
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="windows-1250"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="tedplay"
 	ProjectGUID="{F33D0835-E522-4027-92D0-2389C1DC6CF3}"
 	RootNamespace="YapeSDL"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
@@ -56,9 +57,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="SDL.lib SDLmain.lib"
+				AdditionalDependencies="SDL2.lib SDL2main.lib"
 				GenerateDebugInformation="true"
 				SubSystem="1"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -77,9 +80,6 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -122,8 +122,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="SDL.lib SDLmain.lib"
+				AdditionalDependencies="SDL2.lib SDL2main.lib"
 				SubSystem="1"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -142,9 +144,6 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -173,6 +172,10 @@
 				RelativePath=".\psid.h"
 				>
 			</File>
+			<File
+				RelativePath=".\Sid.h"
+				>
+			</File>
 		</Filter>
 		<File
 			RelativePath=".\Audio.cpp"
@@ -183,7 +186,23 @@
 			>
 		</File>
 		<File
+			RelativePath=".\CbmTune.cpp"
+			>
+		</File>
+		<File
 			RelativePath=".\cpu.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\Filter.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\main.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\Sid.cpp"
 			>
 		</File>
 		<File
