--- a/mods/musicplayer/plugins/openmptplugin/CMakeLists.txt
+++ b/mods/musicplayer/plugins/openmptplugin/CMakeLists.txt
@@ -16,6 +16,7 @@ set(SOURCE_FILES
 	common/serialization_utils.cpp
 	common/typedefs.cpp
 	common/version.cpp
+	common/ComponentManager.cpp
 	libopenmpt/libopenmpt_c.cpp
 	libopenmpt/libopenmpt_cxx.cpp
 	libopenmpt/libopenmpt_impl.cpp
